# python

./: .gitignore  2024正则表达式.py  4.RFM 分步.py  5.消费金额分层-单品种.py  README.md  dash1.ipynb  group_labels_adjust.xlsx  interval_formatters.py  pyproject.toml  table.py  test.html  草稿.py
.run/: config.run.xml  my_config.run.xml  my_configuration.run.xml
MOOC/case001随机森林回归树-预测气温/src/: temps.py
RFM类/: RFM.xlsx
SQL /: SQL.py
financial_fraud_detection/: main.py
financial_fraud_detection/notebooks/: Case004_代码笔记.ipynb
financial_fraud_detection/src/data/: __init__.py  exploration.py  preprocessing.py
financial_fraud_detection/src/evaluation/: metrics.py  visualization.py
financial_fraud_detection/src/model_selection/: hyperparameter_tuning.py
financial_fraud_detection/src/models/: __init__.py
financial_fraud_detection/src/scripts/: undersample_threshold_experiment.py
financial_fraud_detection/src/utils/: config.py
logistic_financial_fraud_detection/: requirements.txt  setup.py
logistic_financial_fraud_detection/src/data/: __init__.py  loader.py  preprocessing.py
logistic_financial_fraud_detection/src/evaluation/: __init__.py  visualization.py
neural_network_temperature_forecasting/: README.md  main.py
temperature_forecasting/data/: data_climate_detail.csv  duplicate.csv
temperature_forecasting/notebooks/: case009_代码笔记.py
临界点判断/: 多项式回归相关.py  模拟销售数据.py  模拟销售行为数据.docx
可视化/: KPI_tracking.xlsx  business_perfomance.xlsx  dash2.ipynb  导航.py  相关关系.py  表.py
消费分层-单品/src/: 5.消费金额分层-单品种.py
草稿/: 1.py  PipeLine in python.py  test.ipynb  三阶段.xlsx  草稿.py
(+25 files in other folders)
